--- a/templates/backend/layout.html
+++ b/templates/backend/layout.html
@@ -39,6 +39,10 @@
 		        -moz-transform:rotate(360deg);
 		    }
 		}
+		a.disabled{
+		    color: gray !important; 
+		    cursor: not-allowed !important;
+		}
 	</style>
 
 	<!-- jscripts -->
