--- a/templates/backend/layout.html
+++ b/templates/backend/layout.html
@@ -43,6 +43,9 @@
 		    color: gray !important; 
 		    cursor: not-allowed !important;
 		}
+		#ftplist td:last-child *{
+			vertical-align: middle;
+		}
 	</style>
 
 	<!-- jscripts -->
