--- a/templates/results_content.html
+++ b/templates/results_content.html
@@ -9,12 +9,12 @@
          <tr>
             <td>
                 <div><strong>{{ result['Nombre']}}</strong></div>
-                <div style='font-size:smaller'>{{ 'ftp://' ~ result['ip'] ~ '/' ~ result['Nombre'] }} | {{ result['Tamanho'] ~ ' Kb' }}
+                <div style='font-size:smaller'>{{ 'ftp://' ~ result['ip'] ~ result['path'] }} | {{ result['Tamanho'] ~ ' Kb' }}
                 </div>
             </td>
             <td id="download-explore">
                 <a id="btndw" class="btn" role="link"
-                   href="ftp://{{ result['ip'] ~ result['path'] ~ '/' ~ result['Nombre'] }}">
+                   href="ftp://{{ result['ip'] ~ result['path'] }}">
                     <span class="glyphicon glyphicon-download-alt"></span>
                 </a>
                 <a class="btn" href='#' onclick="explore('ftp://{{ result['ip'] ~ result['path'] ~ '/' ~ result['Nombre'] }}')">
