--- a/templates/results_content.html
+++ b/templates/results_content.html
@@ -9,7 +9,7 @@
          <tr>
             <td>
                 <div><strong>{{ result['Nombre']}}</strong></div>
-                <div style='font-size:smaller'>{{ 'ftp://' ~ result['ip'] ~ result['path'] }} | {{ result['Tamanho'] ~ ' Kb' }}
+                <div style='font-size:smaller'>{{ 'ftp://' ~ result['ip'] ~ result['path'] }} | {{ result['Tamanho'] | bytesToHRF }}
                 </div>
             </td>
             <td id="download-explore">
