Mostrando fecha de último escaneo y mensaje de resultado en el backend.

--- a/templates/backend/layout.html
+++ b/templates/backend/layout.html
@@ -62,6 +62,7 @@
      	var getDataRoute = '{{ path('get_data') }}';
      	var insertRoute = '{{ path('insert') }}';
      	var updateRoute = '{{ path('update', { 'id' : '__id__' }) }}';
+     	var scanRoute = '{{ path('scan') }}';
     </script>
 
 </head>
