Corrigiendo error en enlace para seleccionar estilo black.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -59,7 +59,7 @@
                     <a role="menuitem" tabindex="-1" href="{% if not searchedtext is none %}?{{ 'searchedtext=' ~ searchedtext ~ '&offset=' ~ offset ~ '&limit=' ~ limit ~ '&style=white' }}{% else %}?style=white{% endif %}">BlueWhite</a>
                 </li>
                 <li role="presentation">
-                    <a role="menuitem" tabindex="-1" href="{% if not searchedtext is none %}?{{ 'searchedtext=' ~ searchedtext ~ '&offset=' ~ offset ~ '&limit=' ~ limit ~ '&style=black' }}{% else %}?style=white{% endif %}">BlackTea</a>
+                    <a role="menuitem" tabindex="-1" href="{% if not searchedtext is none %}?{{ 'searchedtext=' ~ searchedtext ~ '&offset=' ~ offset ~ '&limit=' ~ limit ~ '&style=black' }}{% else %}?style=black{% endif %}">BlackTea</a>
                 </li>
             </ul>
         </li>
