Agregando plugin highlight.js para resaltar el texto buscado.

--- a/templates/backend/index.html
+++ b/templates/backend/index.html
@@ -10,7 +10,7 @@
 				<th>Usuario</th>
 				<th>Estado</th>
 				<th>Último escaneo</th>
-				<th>Mensaje</th>
+				<th>Mensaje de último escaneo</th>
 				<th width="150px">Acciones</th>
 			</tr>
 		</thead>
