--- a/templates/results.html
+++ b/templates/results.html
@@ -8,12 +8,13 @@
 	       $('#carola-search-box').removeClass('carola-search-box-center');
 	        $('#logo').css('margin-left','0.7em');
 	        $('#grafiti').css('text-align','start');
+
+	        //    $('#subtitle').removeClass('subtitle-center');
+		    $('#carola-search-box').addClass('carola-search-box-left');
+		    $('#subtitle').addClass('subtitle-left');
+
+	        $('.result_text').highlight('{{ app.request.get('searchedtext') }}');
 	    });
-
-
-	    //    $('#subtitle').removeClass('subtitle-center');
-	    $('#carola-search-box').addClass('carola-search-box-left');
-	    $('#subtitle').addClass('subtitle-left');
 
 	</script>
 {% endblock %}
