--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,6 +17,7 @@
         <script src="{{ app.request.basepath }}/js/bootstrap-typeahead.js" type="text/javascript" charset="utf-8"></script>
         <script src="{{ app.request.basepath }}/js/mystorage.js" type="text/javascript" charset="utf-8"></script>
         <script src="{{ app.request.basepath }}/js/scrollspy.js" type="text/javascript" charset="utf-8"></script>
+        <script src="{{ app.request.basepath }}/js/highlight.js" type="text/javascript" charset="utf-8"></script>
         <!-- Guardar en una varible javascript la ruta para el autocompletamiento -->
         <script>
          var autocomplete_route = '{{ path('autocompletamiento') }}';
