--- a/templates/results_content.html
+++ b/templates/results_content.html
@@ -7,7 +7,7 @@
     <tbody>
         {% for result in results %}
          <tr>
-            <td>
+            <td class="result_text">
                 <div><strong>{{ result['Nombre']}}</strong></div>
                 <div style='font-size:smaller'>{{ 'ftp://' ~ result['ip'] ~ result['path'] }} | {{ result['Tamanho'] | bytesToHRF }}
                 </div>
