Cambios pequeños en las plantillas
* Se puede hacer click sobre las ips en los filtros para activar los checkboxes correspondientes.
* Ahora son links clickeables las rutas de los resultados.

--- a/templates/results_filters.html
+++ b/templates/results_filters.html
@@ -4,8 +4,8 @@
         <ul class="list-group">
             {% for ip, count in ftps %}
                 <li class="list-group-item">
-                    <input type="checkbox"/>
-                    <label style="font-size: small;font-weight: normal">{{ ip }}</label>
+                    <input id="{{ip}}" type="checkbox"/>
+                    <label for="{{ip}}" style="font-size: small;font-weight: normal">{{ ip }}</label>
                     <span class="badge  alert-info">{{ count }}</span>
                 </li>
             {% endfor %}
