--- a/templates/results_content.html
+++ b/templates/results_content.html
@@ -9,7 +9,11 @@
          <tr>
             <td class="result_text">
                 <div><strong>{{ result['Nombre']}}</strong></div>
-                <div style='font-size:smaller'>{{ 'ftp://' ~ result['ip'] ~ result['path'] }} | {{ result['Tamanho'] | bytesToHRF }}
+                <div style='font-size:smaller'>
+                    <a role="link" href="ftp://{{ result['ip'] ~ result['path'] }}">
+	                {{ 'ftp://' ~ result['ip'] ~ result['path'] }} 
+                    </a>
+                | {{ result['Tamanho'] | bytesToHRF }}
                 </div>
             </td>
             <td id="download-explore">
