--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,7 +44,7 @@
                 <!-- formulario de búsqueda -->
                 <form id="carola-form" class="form-inline" action="{{ path('search') }}" method="get" >
                     <div class="form-group">
-                        <input class="typeahead-suggestion typeahead form-control" type="search" name="searchedtext" placeholder="Escriba aqui el texto que desea buscar"
+                        <input autocomplete="off" class="typeahead-suggestion typeahead form-control" type="search" name="searchedtext" placeholder="Escriba aqui el texto que desea buscar"
                                data-provide="typeahead" data-items="10"
                                value="{% if(app.request.query.has('searchedtext')) %}{{ app.request.query.get('searchedtext') }}{% endif %}" required>
                     </div><div class="form-group">
