Comentado temporalmente link de carpeta.
TODO: Algo de lo siguiente

1- Recortar la ruta desde php
2- Recortar la ruta desde javascript
3- Guardar en el path en la bd sólo la ruta y concatenar path y nombre para el link completo

--- a/templates/results_content.html
+++ b/templates/results_content.html
@@ -21,9 +21,9 @@
                    href="ftp://{{ result.ip ~ result.path }}">
                     <span class="glyphicon glyphicon-download-alt"></span>
                 </a>
-                <a class="btn" href='#' onclick="explore('ftp://{{ result.ip ~ result.path ~ '/' ~ result.Nombre }}')">
+                <!--<a class="btn" href='ftp://{{ result.ip ~ result.path}}')">
                     <span class="glyphicon glyphicon-folder-open">
-                </a>
+                </a>-->
             </td>
         </tr>
         {% endfor %}
