--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -55,12 +55,19 @@
                 {% set offset = app.request.query.has('offset') ? app.request.query.get('offset') : 0 %}
                 {% set limit = app.request.query.has('limit') ? app.request.query.get('limit') : 30 %}
 
+                <!-- TODO: Aqui lo ideal es tirar un for each en la carpeta css para cargar los temas automaticamente
+                 Para facilitar eso hice que el nombre del tema fuera el mismo que el valor que se le asigna a &style y que el substring del nombre del .css, de esta forma seria tirar los temas en la carpeta y se incluirian solos cuando se haga el for-->
+
                 <li role="presentation">
-                    <a role="menuitem" tabindex="-1" href="{% if not searchedtext is none %}?{{ 'searchedtext=' ~ searchedtext ~ '&offset=' ~ offset ~ '&limit=' ~ limit ~ '&style=white' }}{% else %}?style=white{% endif %}">BlueWhite</a>
+                    <a role="menuitem" tabindex="-1" href="{% if not searchedtext is none %}?{{ 'searchedtext=' ~ searchedtext ~ '&offset=' ~ offset ~ '&limit=' ~ limit ~ '&style=Sublime' }}{% else %}?style=Sublime{% endif %}">Sublime</a>
                 </li>
                 <li role="presentation">
-                    <a role="menuitem" tabindex="-1" href="{% if not searchedtext is none %}?{{ 'searchedtext=' ~ searchedtext ~ '&offset=' ~ offset ~ '&limit=' ~ limit ~ '&style=black' }}{% else %}?style=black{% endif %}">BlackTea</a>
+                    <a role="menuitem" tabindex="-1" href="{% if not searchedtext is none %}?{{ 'searchedtext=' ~ searchedtext ~ '&offset=' ~ offset ~ '&limit=' ~ limit ~ '&style=BlueWhite' }}{% else %}?style=BlueWhite{% endif %}">BlueWhite</a>
                 </li>
+                <li role="presentation">
+                    <a role="menuitem" tabindex="-1" href="{% if not searchedtext is none %}?{{ 'searchedtext=' ~ searchedtext ~ '&offset=' ~ offset ~ '&limit=' ~ limit ~ '&style=BlackTea' }}{% else %}?style=BlackTea{% endif %}">BlackTea</a>
+                </li>
+               
             </ul>
         </li>
     </ul> <!-- /tabs -->
