--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,7 +48,9 @@
                                data-provide="typeahead" data-items="10"
                                value="{% if(app.request.query.has('searchedtext')) %}{{ app.request.query.get('searchedtext') }}{% endif %}" required>
                     </div><div class="form-group">
-                        &nbsp;<button type="submit" class="btn btn-primary"><img src="{{ app.request.basepath }}/img/search2.png"> Buscar</button>
+                        &nbsp;
+                        <button type="submit" class="btn btn-primary"><img src="{{ app.request.basepath }}/img/search2.png"><spam>  CAROLA</spam>
+                        </button>
                     </div>
                 </form>
 
