--- a/web/css/carola_site_Sublime.css
+++ b/web/css/carola_site_Sublime.css
@@ -1,36 +1,80 @@
-/*html{*/
-    /*height: 100%;*/
-/*}*/
-
+/*
+Carola´s Theme
+Name: Sublime
+Version: 1.0
+*/
 body{
-    background-color: #0F0F0F !important;
-    box-shadow: inset 0 0 200px rgba(0,0,0,.5) !important;
-    /*height: 100%;*/
+    background-color: #272822 !important;
 }
 
 #carola-nav {
-    background-color: #000000;
+    background-color: #171814;
     opacity: 0.8;
 }
 
 #carola-nav > ul > li > ul{
-    opacity: 1 !important;
-    background-color: #2e2e2e;
+    opacity: .8 !important;
+    background-color: #272822;
+}
+#carola-nav > ul > li > a {
+    color: #FF6B00;
 }
 
-@font-face {
-    font-family: 'kosalsay';
-    src:    url('../fonts/opensans_light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/kosalsay.ttf') format('truetype')
-
-;
+#carola-nav > ul > li > a:hover {
+    color: #ffffff !important;
+    background-color: #272822 !important;
 }
+
+#carola-nav > ul > li.open > a:hover {
+    color: #ffffff !important;
+    background-color: #272822 !important;
+}
+
+.form-control {
+display: block;
+width: 100%;
+height: 34px;
+padding: 6px 12px;
+font-size: 14px;
+line-height: 1.428571429;
+color: #555555;
+vertical-align: middle;
+background-color: #252525;
+background-image: none;
+border: 1px solid #cccccc;
+border-radius: 4px;
+-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+-webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+}
+
+.
+#carola-nav > ul > li.open  ul > li > a:hover {
+    background-color: #101010 !important;
+}
+#carola-nav > ul > li.open > a {
+    background-color: #272822 !important;
+}
+#carola-nav .dropdown-menu > li > a {
+    color: #428bca !important;
+}
+/*#carola-nav > ul  {*/
+    /*opacity: 0.6;*/
+/*}*/
+
+/*#carola-nav > ul > li > a:focus {
+    background-color: #FFFFFF;
+}*/
+
+/*.nav > li {
+    background-color: #3D3D3D !important;
+    box-shadow: inset 0 0 15px rgba(0,0,0,.9) !important;
+}*/
+
 
 #grafiti {
-    font-family: kosalsay;
-    color: #eeeeee;
-    font-size: 7.4em ;
-
+    color: #0094FF;
 }
 
 #subtitle{
@@ -38,43 +82,13 @@ body{
     /*border-top-color: #d0e3f0  !important;;*/
     /*-moz-border-top-width: 5px !important;*/
     /*-moz-border-top-color: #d0e3f0  !important;;*/
-    color: #d0e3f0 !important;
     margin-top: -3em !important;
+    color: #272822 !important;
 }
 
 #currentftp, #cantresult {
     color: #eeeeee !important;
 }
-
-#carola-nav > ul > li > a {
-    color: #FFFFFF;
-}
-
-#carola-nav > ul > li > a:hover {
-    color: #2B2B39 !important;
-}
-
-#carola-nav > ul > li.open > a:hover {
-    color: #ffffff !important;
-}
-
-#carola-nav > ul > li.open  ul > li > a:hover {
-    color: #ffffff !important;
-    background-color: #101010 !important;
-}
-/*#carola-nav > ul  {*/
-    /*opacity: 0.6;*/
-/*}*/
-
-/*#carola-nav > ul > li > a:focus {*/
-    /*background-color: #2B2B39;*/
-/*}*/
-
-#carola-nav > ul > li.open > a {
-    background-color: #2B2B39;
-}
-
-
 
 #carola-search-box .table > tbody > tr {
     background-color: #334 !important;
@@ -91,9 +105,7 @@ body{
     color: #428BCA !important;
 }
 
-#carola-nav .dropdown-menu > li > a {
-    color: rgb(255, 52, 101) !important;
-}
+
 
 .text-info {
     color: rgba(84, 195, 255, 1) !important;
@@ -123,18 +135,26 @@ body{
 }
 
 #carola-form button.btn {
-     background-color: #ffffff;
+     background-color: #171814;
      color: #555555;
-     border-color: #555555;
-     border-style: ridge;
+     border-color: none;
+     border-style: none;
+     border-radius: 0px;     
  }
+#carola-form button[type=submit] spam{
+	display: none}
 
 #carola-form button.btn:hover {
-    background-color: #e3e3e3;
+    background-color: #000000;
     color: #53552f;
-    border-color: #555555;
-    border-style: ridge;
+     border-color: none;
+     border-style: none;
+     border-radius: 0px;  
 }
 .highlight{
     background-color: darkgray;
+}
+
+.footer {
+    background-color: #444444 !important;
 }
