--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,8 +19,10 @@
         <script src="{{ app.request.basepath }}/js/scrollspy.js" type="text/javascript" charset="utf-8"></script>
         <script src="{{ app.request.basepath }}/js/highlight.js" type="text/javascript" charset="utf-8"></script>
         <!-- Guardar en una varible javascript la ruta para el autocompletamiento -->
-        <script>
-         var autocomplete_route = '{{ path('autocompletamiento') }}';
+        <!-- Ruta para cargar con ajax los estilos, solo una vez -->
+        <script type="text/javascript">
+            var autocomplete_route = '{{ path('autocompletamiento') }}';
+            var ajax_styles_route = '{{ path('ajax_styles') }}';
         </script>
         <script src="{{ app.request.basepath }}/js/carola_script.js" type="text/javascript" charset="utf-8"></script>
 
