una regla css para evitar q las sugerencias se salgan del dropdown, q se ve feo

--- a/web/css/carola_site.css
+++ b/web/css/carola_site.css
@@ -208,3 +208,7 @@ td#download-explore > a {
     margin-bottom: 0;
     padding: 0;
 }
+
+.dropdown-menu a{
+    overflow: hidden;
+    margin-left: 5px;}
