--- a/web/css/carola_site_FlattyThing.css
+++ b/web/css/carola_site_FlattyThing.css
@@ -9,7 +9,10 @@ body{
 }
 
 #carola-nav {
-    background-color: #2C3E50;    
+    height: 35px !important;
+    font-size: 85% !important;
+    background-color: #2C3E50;   
+    opacity: 1 !important; 
 }
 
 #carola-nav > ul > li > ul{
@@ -18,10 +21,16 @@ body{
 #carola-nav > ul > li > ul > li >a:hover{
     background-color: #2C3E50 !important;
     color: #fff !important;
-    margin-right: 5px;
+    
 }
+#carola-nav > ul > li > ul > li{
+    padding-right: 5px !important;
+}
+#carola-nav > ul > li > ul > li >a
+{margin-right: 0px !important;}
 #carola-nav > ul > li > a {
     color: #FFf;
+     height: 35px !important;
 }
 
 #carola-nav > ul > li > a:hover, #carola-nav > ul > li > a:focus,#carola-nav > ul > li > a:active,
@@ -95,7 +104,8 @@ transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
     border-top-style: solid !important;
 border-bottom-width: 3px !important;
 border-color: #2C3E50 !important;
-    color: #272822 !important;
+    color: #428bca !important;
+    margin-top: 0 !important
 }
 
 #currentftp, #cantresult {
@@ -172,16 +182,30 @@ border-color: #2C3E50 !important;
 select.form-control{
         height: 38px !important;
 }
+#carola-search-box .table > tbody > tr:hover > td, 
+#carola-search-box .table > tbody > tr:hover > td a{
+color: #fff !important;
+background-color: #2C3E50 !important;
+}
+#carola-search-box .table > tbody > tr:hover
+{
+    
+    transition: background-color: 1s ease-in 0.2 !important;
+border-radius: 5px !important;}
+
 .highlight{
     color: #F39C12 !important;
-    background-color: #ECF0F1 !important;
+    background-color: transparent; !important;
 }
 
 .footer {
     background-color: #2C3E50 !important;
     font-size: 80%;
+    z-index: 11;
+    height: 30px !important;
+    
 }
-
+.footer #administrar, .footer #copyright{margin-top: 8px !important;color: #18BC9C !important;}
 .dropdown-menu > .active > a,.dropdown-menu > .active > a:hover
 {background-color: #2C3E50 !important;
 }
@@ -199,3 +223,4 @@ div.panel-body ul li label{color: #2C3E50 !important}
     background-color: #18BC9C !important;
     border-color: #18BC9C !important;
 }
+.panel-default{border: none !important;}
