--- a/templates/results_content.html
+++ b/templates/results_content.html
@@ -6,7 +6,7 @@
     </thead>
     <tbody>
         {% for result in results %}
-         <tr>
+         <tr class="result" data-ext="{{ result.ext}}" data-ftp="{{ result.ip }}">
             <td class="result_text">
                 <div><strong>{{ result.Nombre | striptags}}</strong></div>
                 <div style='font-size:smaller'>
