La busqueda incluyendo filtros esta funcional 100% habra que darle una mirada para organizar un poco los spaguetis Tambien incluye la posibilidad de buscar una frase exacta, usando comillas esta saldra resaltada en los resultados
creo que se puede mezclar muy pronto, para mejorar los resultados de carola

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,6 +50,8 @@
                                data-provide="typeahead" data-items="10"
                                value="{% if(app.request.query.has('searchedtext')) %}{{ app.request.query.get('searchedtext') }}{% endif %}" required>
                     </div><div class="form-group">
+                    <input type="hidden" name="ftps" class="filteredSearch" value=""></hidden>
+                    <input type="hidden" name="exts" class="filteredSearch" value=""></hidden>
                         &nbsp;
                         <button type="submit" class="btn btn-primary"><img src="{{ app.request.basepath }}/img/search2.png"><spam>  CAROLA</spam>
                         </button>
